# TheNewGentleman

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  TNG.code-workspace  vcpkg-configuration.json  vcpkg.json
cmake/: headerlist.cmake  sourcelist.cmake  version.rc.in
esp/: TheNewGentleman.esp
ext/: Translations.csv
inc/: Base.h  BaseUtil.h  Core.h  Events.h  Hooks.h  Inis.h  PCH.h  Papyrus.h  SEEvents.h  Tng.h  TngCore.h  TngCoreBase.h  TngEvents.h  TngHooks.h  TngInis.h  TngPapyrus.h  TngSizeDistr.h  TngSizeShape.h  TngUtil.h  Util.h
mod/: TNG_MCM.psc  TNG_PapyrusUtil.psc  TNG_Reload.psc  TheNewGentleman.esp  Translations.csv  description.bbcode
mod/articles/: AddonCreationConversion.bbcode
mod/patches/: HIMBO_KSO_TNG.ini  HyliosFemaleMannequins_TNG.ini  Vigilant_TNG.ini
pap/: TNG_MCM.psc  TNG_PapyrusUtil.psc
src/: Base.cpp  BaseUtil.cpp  Core.cpp  Events.cpp  Hooks.cpp  Inis.cpp  Main.cpp  Papyrus.cpp  SEEvents.cpp  TngCore.cpp  TngCoreBase.cpp  TngEvents.cpp  TngHooks.cpp  TngInis.cpp  TngPapyrus.cpp  TngSizeDistr.cpp  TngSizeShape.cpp  TngUtil.cpp  Util.cpp
src/dav/: TESObjectARMA.cpp  TESObjectARMA.h
